Fix stretch in the images

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
 }
 
 #conteudo {
-  max-width: 1559px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 0 15px; /* optional: add some horizontal padding */
 }
